fixed vertical-align for arrows + simpler animation

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -106,7 +106,7 @@ header nav a {
     content: " ";
     transition: all .2s;
     display: inline-block;
-    vertical-align:middle;
+    vertical-align: baseline;
     margin-left: 2px;
 }
 .menu:hover:after {
@@ -592,8 +592,8 @@ ul.posts div {
     box-shadow: inset 0 2px rgba(0, 0, 0, 0.2);
 }
 @keyframes fondu {
-0% { opacity: 0; margin-top: -4px; }
-100% { opacity: 1; margin-top: 4px; }
+0% { opacity: 0; }
+100% { opacity: 1; }
 }
 @font-face {
   font-family: "Cantarell";
